Fixed a bit of word wrapping for longer words in subtitles

--- a/css/style.scss
+++ b/css/style.scss
@@ -80,7 +80,10 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 100;
   text-transform: uppercase;
   color: $light;
-  font-size: 36px;
+  font-size: 21px;
+  @media screen and (min-width:569px) {
+    font-size: 36px;
+  }
   letter-spacing: 6px;
   margin-bottom: $heading-sp;
   text-align: center;
